# trading-bot

./: .env.example  .gitignore  DEPLOY.md  README.md  compare_strategies.py  optimize.py  pyproject.toml  requirements.txt  run_backtest.py
.claude/: launch.json
.streamlit/: config.toml
config/: settings.toml
src/trading_bot/: logging_config.py  paper_trader.py
src/trading_bot/backtest/: dca.py  engine.py  metrics.py  optimize.py
src/trading_bot/data/: fetcher.py  market.py
src/trading_bot/execution/: base.py  live.py  paper.py
src/trading_bot/news/: scorer.py  strategy.py
src/trading_bot/news/sources/: base.py  cryptopanic.py  file_source.py  rss.py
src/trading_bot/risk/: manager.py
src/trading_bot/strategies/: base.py  bollinger_bands.py  breakout.py  combined.py  ema_crossover.py  factory.py  indicators.py  llm_strategy.py  macd.py  rsi.py  stochastic.py  supertrend.py  vwap.py
tests/: test_backtester.py  test_dca.py  test_ema_strategy.py  test_fetcher_history.py  test_leverage.py  test_llm_strategy.py  test_market_and_mammouth.py  test_new_strategies.py  test_news_halt.py  test_news_scorer.py  test_news_strategy.py  test_optimize.py  test_paper_history.py  test_risk_manager.py  test_strategies.py  test_trailing_stop.py
ui/: app.py  strategy_specs.py
